--- a/01/06변수자료형활용.html
+++ b/01/06변수자료형활용.html
@@ -8,9 +8,9 @@
 </head>
 <body>
   <h1> 변수 자료형의 활용</h1>
-  <script src="06문자자료형.js"></script> 
-  <script src="07숫자자료형.js"></script> 
-  <script src="08논리자료형.js"></script> 
+  <script src="06문자자료형.js"></script> <hr>
+  <script src="07숫자자료형.js"></script> <hr>
+  <!-- <script src="08논리자료형.js"></script>  -->
 
 </body>
 </html>
